# tauri_2ex

./: README.md
authorize/: .env.example  README.md  package.json  scheme.sql
authorize/src/: App.tsx
authorize/src-tauri/: Cargo.toml  tauri.conf.json
authorize/src-tauri/src/: main.rs
authorize/src/client/: About.tsx  Home.tsx  Login.tsx
authorize/src/components/: Head.tsx
authorize/src/lib/: LibAuth.ts  LibCookie.ts
rag-lfm25/: README.md  package.json
rag-lfm25/src/: App.tsx
rag-lfm25/src-tauri/: Cargo.toml  tauri.conf.json
rag-lfm25/src-tauri/src/: main.rs
rag-qdrant/: README.md  package.json  vite.config.ts
rag-qdrant/src-tauri/: Cargo.toml  tauri.conf.json
rag-qdrant/src-tauri/src/: main.rs
rag-qwen35/: README.md  package.json  vite.config.ts
rag-qwen35/src-tauri/: Cargo.toml  tauri.conf.json
rag-qwen35/src-tauri/src/: main.rs
tauri-pg/: README.md  package.json  table.sql
tauri-pg/src/: App.tsx
tauri-pg/src-tauri/: Cargo.toml  tauri.conf.json
tauri-pg/src-tauri/src/: main.rs
tauri-pg/src/client/: About.tsx  Home.tsx  Todo.tsx
tauri-pg/src/components/: ConfirmDialog.tsx  DialogBox.tsx  Head.tsx
tauri-pg/src/lib/: DataUtil.ts
tauri-pgvector/: .env.example  README.md  package.json
tauri-pgvector/src-tauri/: Cargo.toml  tauri.conf.json
tauri-pgvector/src-tauri/src/: main.rs
tauri-rag/: .env.example  README.md  package.json
tauri-rag-ollama/: .env.example  README.md  package.json  vite.config.ts
tauri-rag-ollama/src/: App.tsx
tauri-rag-ollama/src-tauri/: Cargo.toml  tauri.conf.json
tauri-rag-ollama/src-tauri/src/: main.rs
tauri-rag/src/: App.tsx
tauri-rag/src-tauri/: Cargo.toml  tauri.conf.json
tauri-rag/src-tauri/src/: main.rs
tauri-rag3/: .env.example  README.md  package.json  vite.config.ts
tauri-rag3/src-tauri/: Cargo.toml  tauri.conf.json
tauri-rag3/src-tauri/src/: main.rs
tauri-rag4/: README.md  package.json
tauri-rag4/src/: App.tsx
tauri-rag4/src-tauri/: Cargo.toml  tauri.conf.json
tauri-rag4/src-tauri/src/: main.rs
tauri-rag5/: .env.example  README.md  package.json  vite.config.ts
tauri-rag5/src/: App.tsx
tauri-rag5/src-tauri/: Cargo.toml  tauri.conf.json
tauri-rag5/src-tauri/src/: main.rs
tauri-react-1/: README.md  package.json
tauri-react-1/src/: App.tsx
tauri-react-1/src-tauri/: Cargo.toml
tauri-react-1/src-tauri/src/: main.rs
tauri-react-1/src/client/: About.tsx  Todo2.tsx
tauri-react-1/src/components/: Head.tsx
tauri-task/: .env.example  README.md  package.json  scheme.sql  vite.config.ts
tauri-task/src/: App.tsx
tauri-task/src-tauri/: Cargo.toml  tauri.conf.json
tauri-turso/: README.md  index.html  package.json  scheme.sql  vite.config.ts
tauri-turso/src/: App.tsx
tauri-turso/src-tauri/: Cargo.toml  tauri.conf.json
tauri-turso/src-tauri/src/: main.rs  mod_chat.rs
(+36 files in other folders)
