[package]
name = "authorize"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "authorize_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.100"
argon2 = "0.4"         # Argon2 実装（PHC 文字列サポート）
dotenvy = "0.15"
libsql = "0.9.23"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand_core = "0.6"     # Salt 生成に OsRng を使うため
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

